# win_to_ubuntu

./: README.md
tank_rocket/devel/: .rosinstall  local_setup.sh
tank_rocket/devel/lib/pkgconfig/: tank_rocket.pc  tank_rocket_navigation.pc
tank_rocket/devel/share/tank_rocket/cmake/: tank_rocketConfig.cmake
tank_rocket/src/tank_rocket/: CMakeLists.txt  package.xml
tank_rocket/src/tank_rocket/devel/: .catkin
tank_rocket/src/tank_rocket/devel/lib/pkgconfig/: tank_rocket.pc
tank_rocket/src/tank_rocket/devel/lib/tank_rocket/: tank_rocket_control
tank_rocket/src/tank_rocket/devel/share/tank_rocket/cmake/: tank_rocketConfig.cmake
tank_rocket/src/tank_rocket/launch/: rviz.launch  tank_rocket_model.launch  teleop.launch
tank_rocket/src/tank_rocket/meshes/: left_back.STL  left_front.STL  link_1.STL  link_2.STL  right_back.STL  right_front.STL
tank_rocket/src/tank_rocket/rviz/: tank_rocket.rviz
tank_rocket/src/tank_rocket/srcipts/: control_keyboard.py
tank_rocket/src/tank_rocket/urdf/urdf/: tank_rocket.urdf
tank_rocket/src/tank_rocket/urdf/xacro/: gazebo.xacro  gps.xacro  master.xacro  model.xacro
tank_rocket/src/tank_rocket/worlds/: map_1.world  map_2.world
tank_rocket/src/tank_rocket_navigation/: CMakeLists.txt  package.xml
tank_rocket/src/tank_rocket_navigation/config/: global_costmap.yaml  local_costmap.yaml
tank_rocket/src/tank_rocket_navigation/launch/: move_base.launch  tank_rocket_navigation.launch
tank_rocket/src/tank_rocket_navigation/rviz/: tank_rocket.rviz
(+1 files in other folders)
